tests/compile_fail/no_field_num.stderr
error: filed_num is required in #[def(...)]
 --> $DIR/no_field_num.rs:5:5
  |
5 |     #[def(def_type = "int32")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
